--- a/create.html
+++ b/create.html
@@ -105,7 +105,11 @@
 	<div class="createoverlay">
 	</div>
 
+	<div class="uploadmodal">
+	</div>
 
+	<div class="createdesc">
+	</div>
 
 </body>
 </html>
