added accept and cancel buttons git status

--- a/create.html
+++ b/create.html
@@ -109,6 +109,10 @@
 		<div class="uploadwrap">
 			hello hello
 		</div>
+		<div class="uploadaction">
+			<img src="images/icons/accept.png" />
+			<img src="images/icons/cancel.png" />
+		</div>
 	</div>
 
 	<div class="createdesc">
