--- a/create.html
+++ b/create.html
@@ -110,8 +110,12 @@
 			hello hello
 		</div>
 		<div class="uploadaction">
-			<img src="images/icons/accept.png" />
-			<img src="images/icons/cancel.png" />
+			<div class="uploadaccept">
+				<img src="images/icons/accept.png" />
+			</div>
+			<div class="uploadcancel">
+				<img src="images/icons/cancel.png" />
+			</div>
 		</div>
 	</div>
 
