--- a/create.html
+++ b/create.html
@@ -107,7 +107,7 @@
 
 	<div class="uploadmodal">
 		<div class="uploadwrap">
-			hello hello
+			this is upload
 		</div>
 		<div class="uploadaction">
 			<div class="uploadaccept">
@@ -119,7 +119,18 @@
 		</div>
 	</div>
 
-	<div class="createdesc">
+	<div class="descmodal">
+		<div class="descwrap">
+			this is desc
+		</div>
+		<div class="descaction">
+			<div class="descaccept">
+				<img src="images/icons/accept.png" />
+			</div>
+			<div class="desccancel">
+				<img src="images/icons/cancel.png" />
+			</div>
+		</div>
 	</div>
 
 </body>
