--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<div class="loginwrap">
 			<img src="images/logo.png" alt="Project One" />
 			<h1>Project One Portfolios</h1>
-			<form name="loginform" class="loginform">
-				<input type="text" name="username" placeholder="Username">
-				<input type="text" name="password" placeholder="Password">
-				<input type="submit" name="loginsubmit" class="loginsubmit" value="Submit" >	
-			</form>
+			<div class="loginform">
+				<input type="text" id="username" placeholder="Username">
+				<input type="text" id="password" placeholder="Password">
+				<input type="button" id="loginsubmit" value="Submit">	
+			</div>
 		</div>
 		<div class="registerwrap">
 			<p>Don't have an account? Register now!</p>
@@ -33,12 +33,12 @@
 		<div class="regwrap">
 			<img src="images/logo.png" alt="Project One" />
 			<h1>Project One Registration</h1>
-			<form name="regform" class="regform">
+			<div class="regform">
 				<input type="text" name="reguser" placeholder="Username">
 				<input type="text" name="regemail" placeholder="Email">
 				<input type="text" name="regpassword" placeholder="Password">
-				<input type="submit" name="regsubmit" class="regsubmit" value="Submit">		
-			</form>
+				<input type="button" class="regsubmit" value="Submit">		
+			</div>
 		</div>
 		<div class="cancelwrap">
 			<p>Cancel</p>
