Login works, get portfolio works, yay

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,70 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="code.js"></script>
+	<script src="admin.js"></script>
 	<script type="text/javascript" src="//use.typekit.net/doa3oio.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <script>
-	$(document).ready(function(){
-	});
-	</script>
-	<title>Project One - Admin</title>
+	<title>Project One - Dashboard</title>
 </head>
 
 <body>
 	<div class="admincontainer">
 		<div class="admindescwrap">
-        <?php include("sv/logged.php"); ?>
+			<button class="logout_btn">Logout</button>
 			<div class="admindesc">
 				<img class="descimg" src="images/icons/desc.png" />
 			</div>
 		</div>
 		<div class="adminimagewrap">
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="adminimage">
-				<div class="adminimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
+			
 		</div>
 		<div class="menuwrap">
 			<div class="menuitemwrap">
