modified create and admin files

--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
 					</div>
 					<img src="images/icons/menu.png" />
 				</div>
-				<div class="menuicon">
+				<div class="menuicon create_redir">
 					<img src="images/icons/create.png" />
 					<div class="menuitem">
 						<h2>Create</h2>
