--- a/create.html
+++ b/create.html
@@ -68,13 +68,13 @@
 		</div>
 		<div class="menuwrap">
 			<div class="menuitemwrap">
-				<div class="menuicon">
+				<div class="menuicon home_redir">
 					<div class="menuitem">
 						<h2>Home</h2>
 					</div>
 					<img src="images/icons/menu.png" />
 				</div>
-				<div class="menuicon">
+				<div class="menuicon create_redir">
 					<img src="images/icons/create.png" />
 					<div class="menuitem">
 						<h2>Create</h2>
