modified admin, create, delete, edit files

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
 		</div>
 		<div class="menuwrap">
 			<div class="menuitemwrap">
-				<div class="menuicon">
+				<div class="menuicon home_redir">
 					<div class="menuitem">
 						<h2>Home</h2>
 					</div>
@@ -36,19 +36,19 @@
 						<h2>Create</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon edit_redir">
 					<img src="images/icons/edit.png" />
 					<div class="menuitem">
 						<h2>Edit</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon delete_redir">
 					<img src="images/icons/delete.png" />
 					<div class="menuitem">
 						<h2>Delete</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon search_redir">
 					<img src="images/icons/search.png" />
 					<div class="menuitem">
 						<h2>Search</h2>
