--- a/delete.html
+++ b/delete.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="code.js"></script>
+	<script src="delete.js"></script>
 	<script type="text/javascript" src="//use.typekit.net/doa3oio.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<title>Project One - delete</title>
@@ -15,6 +15,7 @@
 
 	<div class="deletecontainer">
 		<div class="deletedescwrap">
+			<button class="logout_btn">Logout</button>
 			<div class="deletedesc">
 				<img class="descimg" src="images/icons/desc.png" />
 			</div>
@@ -68,31 +69,31 @@
 		</div>
 		<div class="menuwrap">
 			<div class="menuitemwrap">
-				<div class="menuicon">
+				<div class="menuicon home_redir">
 					<div class="menuitem">
 						<h2>Home</h2>
 					</div>
 					<img src="images/icons/menu.png" />
 				</div>
-				<div class="menuicon">
+				<div class="menuicon create_redir">
 					<img src="images/icons/create.png" />
 					<div class="menuitem">
 						<h2>Create</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon edit_redir">
 					<img src="images/icons/edit.png" />
 					<div class="menuitem">
 						<h2>Edit</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon delete_redir">
 					<img src="images/icons/delete.png" />
 					<div class="menuitem">
 						<h2>Delete</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon search_redir">
 					<img src="images/icons/search.png" />
 					<div class="menuitem">
 						<h2>Search</h2>
