--- a/create.html
+++ b/create.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="code.js"></script>
+	<script src="create.js"></script>
 	<script type="text/javascript" src="//use.typekit.net/doa3oio.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<title>Project One - Create</title>
@@ -15,6 +15,7 @@
 
 	<div class="createcontainer">
 		<div class="createdescwrap">
+			<button class="logout_btn">Logout</button>
 			<div class="createdesc">
 				<img class="descimg" src="images/icons/desc.png" />
 			</div>
@@ -80,19 +81,19 @@
 						<h2>Create</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon edit_redir">
 					<img src="images/icons/edit.png" />
 					<div class="menuitem">
 						<h2>Edit</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon delete_redir">
 					<img src="images/icons/delete.png" />
 					<div class="menuitem">
 						<h2>Delete</h2>
 					</div>
 				</div>
-				<div class="menuicon">
+				<div class="menuicon search_redir">
 					<img src="images/icons/search.png" />
 					<div class="menuitem">
 						<h2>Search</h2>
