--- a/edit.html
+++ b/edit.html
@@ -14,7 +14,28 @@
 
 	<div class="editcontainer">
 		<div class="editdescwrap">
-			<button class="logout_btn">Logout</button>
+			<div class="menuwrap">
+				<div class="menuitemwrap">
+					<div class="menuicon home_redir">
+						<img src="images/icons/menu.png" />
+					</div>
+					<div class="menuicon create_redir">
+						<img src="images/icons/create.png" />
+					</div>
+					<div class="menuicon edit_redir">
+						<img src="images/icons/edit.png" />
+					</div>
+					<div class="menuicon delete_redir">
+						<img src="images/icons/delete.png" />
+					</div>
+					<div class="menuicon search_redir">
+						<img src="images/icons/search.png" />
+					</div>
+					<div class="menuicon logout_redir">
+						<img src="images/icons/logout.png" />
+					</div>
+				</div>	
+			</div>
 			<div class="editdesc">
 				<img class="descimg" src="images/icons/desc.png" />
 			</div>
@@ -66,40 +87,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="menuwrap">
-			<div class="menuitemwrap">
-				<div class="menuicon home_redir">
-					<div class="menuitem">
-						<h2>Home</h2>
-					</div>
-					<img src="images/icons/menu.png" />
-				</div>
-				<div class="menuicon create_redir">
-					<img src="images/icons/create.png" />
-					<div class="menuitem">
-						<h2>Create</h2>
-					</div>
-				</div>
-				<div class="menuicon edit_redir">
-					<img src="images/icons/edit.png" />
-					<div class="menuitem">
-						<h2>Edit</h2>
-					</div>
-				</div>
-				<div class="menuicon delete_redir">
-					<img src="images/icons/delete.png" />
-					<div class="menuitem">
-						<h2>Delete</h2>
-					</div>
-				</div>
-				<div class="menuicon search_redir">
-					<img src="images/icons/search.png" />
-					<div class="menuitem">
-						<h2>Search</h2>
-					</div>
-				</div>
-			</div>	
-		</div>
+
 	</div>
 
 	<div class="editoverlay">
