added dummy data for user 2, corrected html and css files for menu

--- a/delete.html
+++ b/delete.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -37,9 +36,11 @@
 					</div>
 				</div>	
 			</div>
-			<div class="deletedesc">
+			<!-- delete? -->
+			<!--<div class="deletedesc">
 				<img class="descimg" src="images/icons/desc.png" />
-			</div>
+			</div> -->
+			<!-- delete? -->
 		</div>
 		<div class="deleteimagewrap">
 			<div class="deleteimage">
