--- a/edit.html
+++ b/edit.html
@@ -36,9 +36,11 @@
 					</div>
 				</div>	
 			</div>
-			<div class="editdesc">
+			<!-- delete? -->
+			<!--<div class="editdesc">
 				<img class="descimg" src="images/icons/desc.png" />
-			</div>
+			</div> -->
+			<!-- delete? -->
 		</div>
 		<div class="editimagewrap">
 			<div class="editimage">
