replicated create page with buttons for edit and delete pages

--- a/delete.html
+++ b/delete.html
@@ -37,57 +37,13 @@
 				</div>	
 			</div>
 			<!-- delete? -->
-			<!--<div class="deletedesc">
-				<img class="descimg" src="images/icons/desc.png" />
-			</div> -->
+			<div class="deletedesc">
+				<!-- <img class="descimg" src="images/icons/desc.png" /> -->
+			</div>
 			<!-- delete? -->
 		</div>
 		<div class="deleteimagewrap">
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="deleteimage">
-				<div class="deleteimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
+
 		</div>
 
 	</div>
