--- a/edit.html
+++ b/edit.html
@@ -37,57 +37,12 @@
 				</div>	
 			</div>
 			<!-- delete? -->
-			<!--<div class="editdesc">
-				<img class="descimg" src="images/icons/desc.png" />
-			</div> -->
+			<div class="editdesc">
+			</div>
 			<!-- delete? -->
 		</div>
 		<div class="editimagewrap">
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="editimage">
-				<div class="editimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
+			
 		</div>
 
 	</div>
