--- a/create.html
+++ b/create.html
@@ -118,7 +118,7 @@
         	<h2> Create Portfolio</h2>
             <form id="portfolio_form" action="add_portfolio.php" method="post">
             <input type='hidden' name='addPort' value='addNewPort' />
-             <label>Portfolio Title:</label><input type="text" name="imgTitle" id="imgTitle" /><br>
+             <label>Portfolio Title:</label><input type="text" name="pTitle" id="pTitle" /><br>
              <label>Portfolio Description:</label><input type="text" name="pDesc" id="pDesc" /><br>
              <label>Cover image:</label><input type="file" name="pLink" id="pLink" /> <br>
              <input type="button" id="portfolio-submit" value="upload" />
