--- a/create.html
+++ b/create.html
@@ -116,13 +116,9 @@
 	<div class="descmodal">
 		<div class="descwrap">
         	<h2> Create Portfolio</h2>
-            <form id="portfolio_form" action="add_portfolio.php" method="post">
-            <input type='hidden' name='addPort' value='addNewPort' />
-             <label>Portfolio Title:</label><input type="text" name="pTitle" id="pTitle" /><br>
-             <label>Portfolio Description:</label><input type="text" name="pDesc" id="pDesc" /><br>
-             <label>Cover image:</label><input type="file" name="pLink" id="pLink" /> <br>
-             <input type="button" id="portfolio-submit" value="upload" />
-			</form>	
+        	<input type="text" class="link" />
+        	<input type="text" class="title" />
+        	<input type="text" class="desc" />
   		</div>
 		<div class="descaction">
 			<div class="descaccept">
