--- a/create.html
+++ b/create.html
@@ -36,55 +36,10 @@
 				</div>	
 			</div>
 			<div class="createdesc">
-				<img class="descimg" src="images/icons/desc.png" />
 			</div>
 		</div>
 		<div class="createimagewrap">
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
-			<div class="createimage">
-				<div class="createimageedit">
-					<img class="pictureimg" src="images/icons/picture.png" />
-				</div>
-			</div>
+
 		</div>
 
 	</div>
@@ -95,13 +50,9 @@
 	<div class="uploadmodal">
 		<div class="uploadwrap">
         	<h2>Upload Image</h2>
-            <form id="img_form" action="add_img.php" method="post">
-            <input type='hidden' name='addImg' value='addNewImg' />
-             <label>Image Title:</label><input type="text" name="imgTitle" id="imgTitle" /><br>
-             <label>Image Description:</label><input type="text" name="imgDesc" id="imgDesc" /><br>
-             <label>Image URL:</label><input type="file" name="imgLink" id="imgLink" /> <br>
-             <input type="button" id="image-submit" value="upload" />
-			</form>	
+            <input type="text" class="imagelink" />
+        	<input type="text" class="imagetitle" />
+        	<input type="text" class="imagedesc" />
 		</div>
 		<div class="uploadaction">
 			<div class="uploadaccept">
