--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="regform">
 				<input type="text" name="reguser" placeholder="Username">
 				<input type="text" name="regemail" placeholder="Email">
-				<input type="text" name="regpassword" placeholder="Password">
+				<input type="password" name="regpassword" placeholder="Password">
 				<input type="button" class="regsubmit" value="Submit">		
 			</div>
 		</div>
