added new stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h1>Project One Portfolios</h1>
 			<div class="loginform">
 				<input type="text" id="username" placeholder="Username">
-				<input type="text" id="password" placeholder="Password">
+				<input type="password" id="password" placeholder="Password">
 				<input type="button" id="loginsubmit" value="Submit">	
 			</div>
 		</div>
