style updated for modals

--- a/create.html
+++ b/create.html
@@ -50,9 +50,9 @@
 	<div class="uploadmodal">
 		<div class="uploadwrap">
         	<h2>Upload Image</h2>
-            <input type="text" class="imagelink" />
-        	<input type="text" class="imagetitle" />
-        	<input type="text" class="imagedesc" />
+            <input type="file" class="imagelink" placeholder="File Upload" />
+        	<input type="text" class="imagetitle" placeholder="Title" />
+        	<input type="text" class="imagedesc" placeholder="Description" />
 		</div>
 		<div class="uploadaction">
 			<div class="uploadaccept">
@@ -67,9 +67,9 @@
 	<div class="descmodal">
 		<div class="descwrap">
         	<h2> Create Portfolio</h2>
-        	<input type="text" class="link" />
-        	<input type="text" class="title" />
-        	<input type="text" class="desc" />
+        	<label>Upload cover image</label><input type="file" class="link" placeholder="Cover Image Upload" />
+        	<input type="text" class="title" placeholder="Title" />
+        	<input type="text" class="desc" placeholder="Description" />
   		</div>
 		<div class="descaction">
 			<div class="descaccept">
