--- a/create.html
+++ b/create.html
@@ -50,7 +50,7 @@
 	<div class="uploadmodal">
 		<div class="uploadwrap">
         	<h2>Upload Image</h2>
-            <input type="file" class="imagelink" placeholder="File Upload" />
+            <input type="text" class="imagelink" placeholder="File Upload" />
         	<input type="text" class="imagetitle" placeholder="Title" />
         	<input type="text" class="imagedesc" placeholder="Description" />
 		</div>
@@ -67,7 +67,7 @@
 	<div class="descmodal">
 		<div class="descwrap">
         	<h2> Create Portfolio</h2>
-        	<label>Upload cover image</label><input type="file" class="link" placeholder="Cover Image Upload" />
+        	<label>Upload cover image</label><input type="text" class="link" placeholder="Cover Image Upload" />
         	<input type="text" class="title" placeholder="Title" />
         	<input type="text" class="desc" placeholder="Description" />
   		</div>
