upload files typed up

--- a/create.html
+++ b/create.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<script src="upload_plugin/ajaxfileupload.js"></script>
 	<script src="create.js"></script>
 	<script type="text/javascript" src="//use.typekit.net/doa3oio.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -50,9 +51,9 @@
 	<div class="uploadmodal">
 		<div class="uploadwrap">
         	<h2>Upload Image</h2>
-            <input type="text" class="imagelink" placeholder="File Upload" />
         	<input type="text" class="imagetitle" placeholder="Title" />
         	<input type="text" class="imagedesc" placeholder="Description" />
+            <input type="text" class="imagelink" placeholder="File Upload" />
 		</div>
 		<div class="uploadaction">
 			<div class="uploadaccept">
@@ -67,9 +68,9 @@
 	<div class="descmodal">
 		<div class="descwrap">
         	<h2> Create Portfolio</h2>
-        	<label>Upload cover image</label><input type="text" class="link" placeholder="Cover Image Upload" />
         	<input type="text" class="title" placeholder="Title" />
         	<input type="text" class="desc" placeholder="Description" />
+        	<input type="text" class="link" placeholder="Cover Image Upload" />
   		</div>
 		<div class="descaction">
 			<div class="descaccept">
